Fix for editor title wrapping

--- a/src/BMCoreUI.css
+++ b/src/BMCoreUI.css
@@ -1267,6 +1267,10 @@ input:not(:checked) + .BMWindowSwitchGutter > .BMWindowSwitchKnob, .BMWindowSwit
 .BMLayoutEditorDetailsTitle {
 	margin: 0 !important;
 	padding: 0 !important;
+
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 .BMLayoutEditorDetailsWindow {
